# ChangeLog for catalyst
# Copyright 1999-2011 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  10 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Replace virtual/portage with sys-apps/portage, bug #358847

  05 Feb 2011; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/amd64.py:
  Enable new amd64 subarches

  01 Nov 2010; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/mips.py:
  Add patch for Loongson support, patch by Zhang Le <r0bertz at gentoo dot
  org>, bug #330241

  26 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/arm.py:
  ARM fixes

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Apply patch to make stage2 quiet, thanks to Alexandre Nuno Milheiro
  <nunomilheiro@gmail.com>, gentoo bug #273664

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/netboot/netboot-final.sh:
  Fix sparc bug, gentoo bug 297231

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/arm.py:
  Fix typo and add armv7a-hardfp target

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh,
  targets/support/pre-kmerge.sh:
  Apply patch from Guy Martin <gmsoft@gentoo.org> to fix installcd for hppa,
  gentoo bug #317423

  22 Jan 2010; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/util.py:
  Actually pay attention to the 'delete' parameter for Gentoo bug #301769

  20 Jan 2010; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/util.py:
  Missing space in catalyst.util.list_bashify()

  29 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Only run depclean for stage3/system

  28 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Run depclean at the end of stage generation (for Gentoo bug #295132)
